--- a/conda_environment.yml
+++ b/conda_environment.yml
@@ -1,5 +1,8 @@
 name: walking_bass_transcription
+channels:
+- defaults
 dependencies:
+- blas=1.0=mkl
 - mkl=2017.0.1=0
 - numpy=1.12.1=py36_0
 - openssl=1.0.2l=0
@@ -14,20 +17,30 @@ dependencies:
 - xz=5.2.2=1
 - zlib=1.2.8=3
 - pip:
+  - absl-py==0.9.0
+  - astor==0.8.1
   - audioread==2.1.4
   - cffi==1.10.0
   - cython==0.25.2
   - decorator==4.0.11
+  - gast==0.3.3
+  - grpcio==1.28.1
   - h5py==2.7.0
   - joblib==0.11
   - keras==2.0.4
   - librosa==0.5.1
+  - markdown==3.2.1
+  - protobuf==3.11.3
   - pycparser==2.17
   - pyyaml==3.12
   - resampy==0.1.5
   - scikit-learn==0.18.1
   - six==1.10.0
   - soundfile==0.9.0.post1
+  - tensorboard==1.10.0
+  - tensorflow==1.10.0
+  - termcolor==1.1.0
   - theano==0.9.0
+  - werkzeug==1.0.1
 prefix: /Users/jakobabeer/miniconda3/envs/walking_bass_transcription
 
